Nop lai bai tap Form va Table phan 2

--- a/module1/ss5_html_form_va_table/bai_tap/BaiTapTaoFormDonGianPhan2.html
+++ b/module1/ss5_html_form_va_table/bai_tap/BaiTapTaoFormDonGianPhan2.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <title>[Bài Tập] Tạo Form Đơn Giản Phần 1</title>
     <style>
-
-
+        .blueLabel {
+            color: blue;
+        }
     </style>
 
 </head>
