Nop bai tap Tao Giao Dien Form

--- a/module1/ss5_html_form_va_table/bai_tap/BaiTapTaoFormDonGianPhan2.html
+++ b/module1/ss5_html_form_va_table/bai_tap/BaiTapTaoFormDonGianPhan2.html
@@ -20,7 +20,7 @@
             </tr>
             <tr>
                 <td class="blueLabel"><label for="dob">Ngày sinh</label></td>
-                <td><input type="text" id=dob name="dob"></td>
+                <td><input type="date" id=dob name="dob"></td>
             </tr>
             <tr>
                 <td class="blueLabel"><label>Giới tính</label></td>
