Up bai tap va thuc hanh ss7

--- a/module1/ss5_html_form_va_table/thuc_hanh/ThucHanh4TaoBangNangCaoPhan1.html
+++ b/module1/ss5_html_form_va_table/thuc_hanh/ThucHanh4TaoBangNangCaoPhan1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>[Thực Hành] Tạo Bảng Nâng Cao</title>
-<!--    <link rel="stylesheet" href="ThucHanh4TaoBangNangCaoPhan1.css">-->
+    <link rel="stylesheet" href="ThucHanh4TaoBangNangCaoPhan1.css">
 </head>
 <body>
 <h3>Thời Khóa Biểu</h3>
