Up bai tap dieu kien

--- a/module1/ss9_cau_truc_dieu_kien_2/bai_tap/BaiTap4DieuKien02Bai6GiaiPhuongTrinhBac1.html
+++ b/module1/ss9_cau_truc_dieu_kien_2/bai_tap/BaiTap4DieuKien02Bai6GiaiPhuongTrinhBac1.html
@@ -16,8 +16,7 @@
         } else {
             alert("Phương trình " + a + "x + " + b + " = 0 vô nghiệm.")
         }
-    } else
-    {
+    } else {
         let x = -b / a;
         alert("Phương trình " + a + "x + " + b + " = 0 có nghiệm là: " + x);
     }
