Up bai tap ngay 10.03

--- a/module1/ss9_cau_truc_dieu_kien_2/bai_tap/BaiTap4DieuKien02Bai12TinhLaiVayNganHang.html
+++ b/module1/ss9_cau_truc_dieu_kien_2/bai_tap/BaiTap4DieuKien02Bai12TinhLaiVayNganHang.html
@@ -5,6 +5,21 @@
     <title>[Bài Tập] Tính Lãi Vay Ngân Hàng</title>
 </head>
 <body>
-<!--Chưa hoàn thành-->
+<script>
+    // phaiTra = tienGoc * (1 + laiSuat / 100)^soThang
+
+    let soTien = parseInt(prompt("Số tiền vay ban đầu: "));
+    let laiSuat = parseInt(prompt("Lãi suất vay (%/tháng): "));
+    let soThang = parseInt(prompt("Số tháng vay: "));
+    let tienLai = 0;
+    let tongLai = 0;
+    let i;
+    for (i = 1; i <= soThang; i++) {
+        tienLai = laiSuat / 100 * soTien;
+        tongLai += tienLai;
+        soTien = soTien + tienLai;
+    }
+    alert("Tổng tiền lãi: " + tongLai + "tổng tiền: " + soTien);
+</script>
 </body>
 </html>
