--- a/module1/ss9_cau_truc_dieu_kien_2/bai_tap/BaiTap4DieuKien02Bai12TinhLaiVayNganHang.html
+++ b/module1/ss9_cau_truc_dieu_kien_2/bai_tap/BaiTap4DieuKien02Bai12TinhLaiVayNganHang.html
@@ -9,7 +9,7 @@
     // phaiTra = tienGoc * (1 + laiSuat / 100)^soThang
 
     let soTien = parseInt(prompt("Số tiền vay ban đầu: "));
-    let laiSuat = parseInt(prompt("Lãi suất vay (%/tháng): "));
+    let laiSuat = parseFloat(prompt("Lãi suất vay (%/tháng): "));
     let soThang = parseInt(prompt("Số tháng vay: "));
     let tienLai = 0;
     let tongLai = 0;
@@ -19,7 +19,7 @@
         tongLai += tienLai;
         soTien = soTien + tienLai;
     }
-    alert("Tổng tiền lãi: " + tongLai + "tổng tiền: " + soTien);
+    alert("Tổng tiền lãi: " + Math.round(tongLai) + ". Tổng tiền: " + Math.round(soTien));
 </script>
 </body>
 </html>
