--- a/module1/ss14_ham_1/bai_tap/BaiTap1HamKiemTraSoNguyenTo.html
+++ b/module1/ss14_ham_1/bai_tap/BaiTap1HamKiemTraSoNguyenTo.html
@@ -2,9 +2,29 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>[Bài Tập] Hàm - Kiểm tra số nguyên tố</title>
 </head>
 <body>
-$END$
+<script>
+    function isPrime(a) {
+        let count = null;
+        for (let i = 0; i <= a; i++) {
+            if (a % i === 0) {
+                count++;
+            }
+        }
+        if (a === 0 || count !== 2) {
+            return false;
+        } else {
+            return true;
+        }
+    }
+
+    for (let j = 0; j < 10000; j++) {
+        if (isPrime(j)) {
+            document.write(j + ", ")
+        }
+    }
+</script>
 </body>
 </html>
