--- a/module1/ss14_ham_1/thuc_hanh/ThucHanh3TimGiaTriNhoNhatCuaMang.html
+++ b/module1/ss14_ham_1/thuc_hanh/ThucHanh3TimGiaTriNhoNhatCuaMang.html
@@ -2,9 +2,36 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>[Thực Hành] Hàm - Tìm giá trị nhỏ nhất của mảng</title>
 </head>
 <body>
-$END$
+<script>
+    function findMin(arr) {
+        if (arr.length === 0) {
+            return min = -1 + (". The array is empty.")
+        } else {
+            let min = arr[0];
+            for (let i = 0; i < arr.length; i++) {
+                if (arr[i] < min) {
+                    min = arr[i];
+                }
+            }
+            return min;
+        }
+    }
+
+    let arr1 = [3, 5, 1, 8, -3, 7, -8];
+    let min = findMin(arr1);
+    alert("minArr1 = "+min);
+
+    let arr2 = [7, 12, 6, 9, 20, 56, 89];
+    alert("minArr2 = "+findMin(arr2));
+
+    let arr3 = [];
+    alert("minArr3 = "+findMin(arr3));
+
+    let arr4 = [0, 0, 0, 0, 0, 0];
+    alert("minArr4 = "+findMin(arr4));
+</script>
 </body>
 </html>
