Up bài tập Ham ngay 17/3

--- a/module1/ss14_ham_1/bai_tap/BaiTap3LuyenTapHam1Bai2TangGiaTriDoiSo.html
+++ b/module1/ss14_ham_1/bai_tap/BaiTap3LuyenTapHam1Bai2TangGiaTriDoiSo.html
@@ -7,8 +7,10 @@
 <body>
 <script>
     function increaseNum(num) {
-
+        return ++num;
     }
+    let a = parseInt(prompt("Enter an integer: "));
+        alert(increaseNum(a));
 </script>
 </body>
 </html>
