Up bai tap OOP ngay 22/3

--- a/module1/ss17_lap_trinh_huong_doi_tuong_2/bai_tap/BaiTap3OopTuongTacGiuaHaiDoiTuongCongTacVaBongDen.html
+++ b/module1/ss17_lap_trinh_huong_doi_tuong_2/bai_tap/BaiTap3OopTuongTacGiuaHaiDoiTuongCongTacVaBongDen.html
@@ -31,7 +31,7 @@
             this.lamp = lamp;
         }
 
-        switchOn(lamp) {
+        switchOn() {
             this.lamp.turnOn();
         }
 
