Up bai tap va thuc hanh Java Overview ngay 1/4/2022

--- a/module1/case_study/YeuCau2Bai2KiemTraNguyenAmPhuAm.html
+++ b/module1/case_study/YeuCau2Bai2KiemTraNguyenAmPhuAm.html
@@ -10,32 +10,14 @@
     let flag = false;
     switch (letter) {
         case 'u':
-            flag = true;
-            break;
         case 'e':
-            flag = true;
-            break;
         case 'o':
-            flag = true;
-            break;
         case 'a':
-            flag = true;
-            break;
         case 'i':
-            flag = true;
-            break;
         case 'U':
-            flag = true;
-            break;
         case 'E':
-            flag = true;
-            break;
         case 'O':
-            flag = true;
-            break;
         case 'A':
-            flag = true;
-            break;
         case 'I':
             flag = true;
             break;
@@ -47,6 +29,21 @@
     } else {
         document.write(letter + " không phải là nguyên âm.");
     }
+
+
+    // let character = prompt("Enter only 1 character to check: ");
+    // character = character.toLowerCase();
+    // switch (character) {
+    //     case 'u':
+    //     case 'e':
+    //     case 'o':
+    //     case 'a':
+    //     case 'i':
+    //         document.write(character + " là nguyên âm.");
+    //         break;
+    //     default:
+    //         document.write(character + " không phải là nguyên âm.");
+    // }
 </script>
 </body>
 </html>
