--- a/module1/case_study/YeuCau3Bai3TimChiSoCuaPhanSoLonNhat.html
+++ b/module1/case_study/YeuCau3Bai3TimChiSoCuaPhanSoLonNhat.html
@@ -6,22 +6,26 @@
 </head>
 <body>
 <script>
-    let numerators = [5, 2, 5, 2, 7, 4];
-    let denominators = [6, 3, 4, 4, 2, 8];
-    let maxFraction = numerators[0] / denominators[0];
-    let numerOfMax;
-    let denomOfMax;
-    let indexOfMax;
-    for (let i = 1; i < numerators.length; i++) {
-        if (numerators[i] / denominators[i] > maxFraction) {
-            maxFraction = numerators[i] / denominators[i];
-            numerOfMax = numerators[i];
-            denomOfMax = denominators[i];
-            indexOfMax = i;
+    let myNumerators = [5, 2, 5, 2, 7, 4];
+    let myDenominators = [6, 3, 4, 4, 2, 8];
+    maxFractionIndex(myNumerators, myDenominators);
+
+    function maxFractionIndex(numerators, denominators) {
+        let maxFraction = numerators[0] / denominators[0];
+        let numerOfMax;
+        let denomOfMax;
+        let indexOfMax;
+        for (let i = 1; i < numerators.length; i++) {
+            if (numerators[i] / denominators[i] > maxFraction) {
+                maxFraction = numerators[i] / denominators[i];
+                numerOfMax = numerators[i];
+                denomOfMax = denominators[i];
+                indexOfMax = i;
+            }
         }
+        document.write("Max fraction is: " + numerOfMax + "/" + denomOfMax + "<br>");
+        document.write("The index of the max fraction is: " + indexOfMax);
     }
-    console.log("Max fraction is: " + numerOfMax + "/" + denomOfMax);
-    console.log("The index of the max fraction is: " + indexOfMax)
 </script>
 </body>
 </html>
