--- a/module1/case_study/YeuCau1Bai3VeHinhTamGiacCanDac.html
+++ b/module1/case_study/YeuCau1Bai3VeHinhTamGiacCanDac.html
@@ -8,7 +8,7 @@
 <script>
     let h = 5;
     for (let i = 0; i < h; i++) {
-        for (let j = h; j > i; j--) {
+        for (let j = h; j > i + 1; j--) {
             document.write("&nbsp&nbsp");
         }
         for (let k = 0; k <= i * 2; k++) {
