--- a/module1/case_study/YeuCau5Bai1TinhTongCacSoChanTrongMaTranMang2Chieu.html
+++ b/module1/case_study/YeuCau5Bai1TinhTongCacSoChanTrongMaTranMang2Chieu.html
@@ -6,19 +6,29 @@
 </head>
 <body>
 <script>
-    let arr=[[1,2],[4,5],[6,9]];
-    let m=3;
-    let n=2;
-    let sum = 0;
-    for (let i = 0; i < m; i++) {
-        for (let j = 0; j < n; j++) {
-            if (arr[i][j] % 2 === 0) {
-                sum += arr[i][j];
+    let a = parseInt(prompt("Enter the row of the matrix:"));
+    let b = parseInt(prompt("Enter the column of the matrix:"));
+    alert(sumEvenOfMatrix(a, b));
+
+    function sumEvenOfMatrix(m, n) {
+        let arr = [];
+        for (let i = 0; i < m; i++) {
+            for (let j = 0; j < n; j++) {
+                arr.push(parseInt(prompt("Enter a number to the matrix:")));
             }
         }
-    }
-    console.log(sum);
-
+        let total = 0;
+        for (let x = 0; x < arr.length; x++) {
+            for (let y = 0; y < arr[x].length; y++) {
+                if (arr[x][y] % 2 === 0) {
+                    total += arr[x][y];
+                    console.log(total);
+                }
+            }
+        }
+            console.log(arr);
+            return total;
+        }
 </script>
 </body>
 </html>
